--- a/Netflix_Movies_and_TV_Shows.ipynb
+++ b/Netflix_Movies_and_TV_Shows.ipynb
@@ -1,23 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "52a9dbfc-488b-490d-b45a-37c35810154e",
+   "cell_type": "markdown",
+   "id": "d76a4711-5939-4919-9332-fc1364595dbd",
    "metadata": {
     "id": "52a9dbfc-488b-490d-b45a-37c35810154e"
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Netflix_Movies_and_TV_Shows"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "7d44d0d6-ac9d-4073-9f5d-098b8bc78ee8",
+   "cell_type": "markdown",
+   "id": "11c55100-fedb-4525-8d00-3bf89436c59d",
    "metadata": {
     "id": "7d44d0d6-ac9d-4073-9f5d-098b8bc78ee8"
    },
-   "outputs": [],
    "source": [
     "## 🔗 Veri Kümesi\n",
     "Veri kümesi, [Netflix Movies and TV Shows](https://www.kaggle.com/datasets/shivamb/netflix-shows/data) adresinden alınmıştır. Bu veri kümesi, Netflix'in platformundaki içeriklerin detaylarını içermektedir.\n",
@@ -26,7 +24,7 @@
     "Ayrıca, projenin etkileşimli bir versiyonu [Netflix Analysis - Hugging Face Space](https://huggingface.co/spaces/btulftma/Netflix-Analysis) adresinde bulunmaktadır.\n",
     "\n",
     "##  🔗 Github\n",
-    "Projenin detaylı açıklaması ve diğer kodlar için, [Netflix Analysis - Hugging Face Space](https://huggingface.co/spaces/btulftma/Netflix-Analysis)  "
+    "Projenin detaylı açıklaması ve diğer kodlar için, [Netflix Analysis - Github](https://github.com/FBetulS/netflix-movies-tv-shows)  "
    ]
   },
   {
